--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - frontend_node_modules:/app/node_modules
     networks:
       - tennis-network
+    command: sh -c "npm install && npm run dev"
 
 volumes:
   postgres_data:
